force-app/main/Investigations/Whistleblower_Management/objects/Action_Taken__c/Action_Taken__c.object-meta.xml
<CustomObject>
    <label>Action Taken</label>
    <nameField>
        <label>Action Taken Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions Taken</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>