force-app/main/Investigations/Whistleblower_Management/objects/Action_Taken__c/fields/Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Date__c</fullName>
    <description>Date when the action was taken.</description>
    <inlineHelpText>Date when the action was taken.</inlineHelpText>
    <label>Action Date</label>
    <type>DateTime</type>
</CustomField>