force-app/main/Investigations/Whistleblower_Management/objects/Action_Taken__c/fields/Action_Details__c.field-meta.xml
<CustomField>
    <fullName>Action_Details__c</fullName>
    <description>Description of the actions taken.</description>
    <inlineHelpText>Description of the actions taken.</inlineHelpText>
    <label>Action Details</label>
    <type>TextArea</type>
</CustomField>