force-app/main/Investigations/Whistleblower_Management/objects/Action_Taken__c/fields/Effectiveness__c.field-meta.xml
<CustomField>
    <fullName>Effectiveness__c</fullName>
    <description>Assessment of the action&apos;s effectiveness.</description>
    <inlineHelpText
  >Assessment of the action&apos;s effectiveness.</inlineHelpText>
    <label>Effectiveness</label>
    <type>TextArea</type>
</CustomField>