force-app/main/Investigations/Whistleblower_Management/objects/Action_Taken__c/fields/Follow_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if further follow-up actions are required.</description>
    <inlineHelpText>Indicates if further follow-up actions are required.</inlineHelpText>
    <label>Follow Up Required</label>
    <type>Checkbox</type>
</CustomField>