force-app/main/Investigations/Whistleblower_Management/objects/Action_Taken__c/fields/Has_Access__c.field-meta.xml
<CustomField>
    <fullName>Has_Access__c</fullName>
    <formula
  >IF( Whistleblower_Report__r.CreatedById = $User.Id, TRUE, FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Access</label>
    <type>Checkbox</type>
</CustomField>