force-app/main/Investigations/Whistleblower_Management/objects/Action_Taken__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Links the action to a specific investigation.</description>
    <inlineHelpText
  >Links the action to a specific investigation.</inlineHelpText>
    <label>Investigation</label>
    <referenceTo>Investigation__c</referenceTo>
    <relationshipLabel>Actions Taken</relationshipLabel>
    <relationshipName>Actions_Taken</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>