force-app/main/Investigations/Whistleblower_Management/objects/Action_Taken__c/fields/Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User or team responsible for implementing the action.</description>
    <inlineHelpText>User or team responsible for implementing the action.</inlineHelpText>
    <label>Responsible Party</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Actions_Taken</relationshipName>
    <type>Lookup</type>
</CustomField>