force-app/main/Investigations/Whistleblower_Management/objects/Action_Taken__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Investigation</fullName>
                <default>true</default>
                <label>Pending Investigation</label>
            </value>
            <value>
                <fullName>Terminated Employee</fullName>
            </value>
            <value>
                <fullName>Put Employee On Warning</fullName>
            </value>
            <value>
                <fullName>No Action Taken</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>