force-app/main/Investigations/Whistleblower_Management/objects/Action_Taken__c/fields/Whistleblower_Report__c.field-meta.xml
<CustomField>
    <fullName>Whistleblower_Report__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Whistleblower Report</label>
    <referenceTo>Whistleblower_Report__c</referenceTo>
    <relationshipLabel>Actions Taken</relationshipLabel>
    <relationshipName>Actions_Taken</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>