force-app/main/Investigations/Whistleblower_Management/objects/Action_Taken__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Investigation__c</columns>
    <columns>Follow_Up_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>