force-app/main/Investigations/Whistleblower_Management/objects/Action_Taken__c/listViews/My_Actions_Taken.listView-meta.xml
<ListView>
    <fullName>My_Actions_Taken</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Action_Date__c</columns>
    <columns>Follow_Up_Required__c</columns>
    <columns>Effectiveness__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Has_Access__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Actions Taken</label>
</ListView>